--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,8 +22,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="414dp"
-        android:layout_height="318dp"
+        android:layout_width="match_parent"
+        android:layout_height="308dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,8 +33,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/full_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="400dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
             android:hint="@string/full_name"
             android:inputType="textEmailAddress"
             android:textColorHint="#757575"
@@ -48,8 +49,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/classe"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:hint="@string/Class"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
@@ -64,8 +66,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
@@ -81,8 +84,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:hint="@string/password"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
@@ -97,8 +101,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/confirm_password"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:hint="@string/confirm_password"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
@@ -111,9 +116,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/already_have_account"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
