--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="308dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -36,11 +36,11 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
             android:layout_marginEnd="4dp"
             android:hint="@string/full_name"
             android:inputType="textEmailAddress"
             android:textColorHint="#757575"
+            android:textSize="18sp"
             tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -53,11 +53,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 android:layout_marginEnd="4dp"
                 android:hint="@string/Class"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
+                android:textSize="18sp"
                 tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,11 +71,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 android:layout_marginEnd="4dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
+                android:textSize="18sp"
                 tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -90,11 +90,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 android:layout_marginEnd="4dp"
                 android:hint="@string/password"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
+                android:textSize="18sp"
                 tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,11 +108,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
                 android:layout_marginEnd="4dp"
                 android:hint="@string/confirm_password"
                 android:inputType="textEmailAddress"
                 android:textColorHint="#757575"
+                android:textSize="18sp"
                 tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
         </com.google.android.material.textfield.TextInputLayout>
     </com.google.android.material.textfield.TextInputLayout>
