change idea of math app into to do list including note and some other things,a sqlite db has added with a task manager and helper and a task contract with 2 buttons of add task and remove still didn't add the change method in the task manager class

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/image_icon"
-        android:layout_width="97dp"
-        android:layout_height="94dp"
+        android:layout_width="129dp"
+        android:layout_height="116dp"
         android:contentDescription="@string/genie"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,8 @@
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/MATH"
-        android:textSize="20sp"
+        android:text="@string/genie"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
