grouping functionality has fixed

--- a/app/src/main/res/menu/navigation_icons.xml
+++ b/app/src/main/res/menu/navigation_icons.xml
@@ -8,30 +8,16 @@
                 android:id="@+id/home"
                 android:icon="@drawable/ic_baseline_home_24"
                 android:title="@string/home"/>
-            <item
-                android:id="@+id/plus_ou_moine"
-                android:icon="@mipmap/ic_sup_et_inf_round"
-                android:title="@string/plus_ou_moins"/>
-
-            <item
-                android:id="@+id/egale"
-                android:icon="@mipmap/ic_egal_ou_de_round"
-                android:title="@string/egale_ou_deferent"/>
         </group>
         <group
             android:id="@+id/operation">
             <item
-                android:id="@+id/fois"
-                android:icon="@drawable/fois1"
-                android:title="@string/fois"/>
-            <item
-                android:id="@+id/division"
-                android:icon="@drawable/devision"
-                android:title="@string/division"/>
-            <item
                 android:id="@+id/somme"
                 android:icon="@drawable/pluse"
                 android:title="@string/somme"/>
+            <item
+                android:id="@+id/tasks_group"
+                android:title="@string/tasks_group"/>
             <item
                 android:id="@+id/soustraction"
                 android:icon="@drawable/soustraction"
