--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Soustraction">
+    tools:context=".user_info">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
