--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="vertical"
@@ -12,43 +14,29 @@
         android:layout_height="match_parent">
 
         <!-- Add New To-Do -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputLayout"
+        <EditText
+            android:id="@+id/add_task"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="57dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="64dp"
             android:hint="@string/new_todo"
+            android:textColorHint="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/add_task"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="#616161" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- To-Do List -->
-
-        <!-- Add Button -->
-
-        <ListView
-            android:id="@+id/todoList"
-            android:layout_width="match_parent"
-            android:layout_height="620dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:listSelector="@color/purple_200"
-            android:orientation="vertical"
-            android:paddingTop="5dp"
+        <EditText
+            android:id="@+id/add_notes"
+            android:layout_width="403dp"
+            android:layout_height="566dp"
+            android:hint="@string/task_notes"
             app:layout_constraintBottom_toTopOf="@+id/addButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/inputLayout"
-            app:layout_constraintVertical_bias="0.0" />
+
+            app:layout_constraintTop_toBottomOf="@+id/add_task"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/addButton"
@@ -59,36 +47,38 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.771"
-            app:layout_constraintStart_toEndOf="@+id/remove"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.976" />
-
-        <Button
-            android:id="@+id/remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginStart="16dp"
-            android:text="@string/remove"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.225"
-            app:layout_constraintStart_toEndOf="@+id/change"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.979" />
-
-        <Button
-            android:id="@+id/change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/change"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.976" />
+            app:layout_constraintVertical_bias="1.0" /> <!-- Align to the bottom of the parent -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</LinearLayout>
+
+
+<!--        <Button-->
+<!--            android:id="@+id/remove"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:text="@string/remove"-->
+<!--            android:visibility="invisible"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.225"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/change"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.979" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/change"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:text="@string/change"-->
+<!--            android:visibility="invisible"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.976" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--</LinearLayout>-->
